we are able to create group sorting

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8672,7 +8672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "8bb90982",
    "metadata": {},
    "outputs": [
@@ -8696,7 +8696,16 @@
       "1       P002  Sarah   60       Diabetes         8.2          210\n",
       "0       P001   John   45   Hypertension         7.5          240\n",
       "5       P006  Linda   29        Healthy         2.0          160\n",
-      "2       P003   Mike   35        Healthy         1.2          180\n"
+      "2       P003   Mike   35        Healthy         1.2          180\n",
+      "\n",
+      " patients with their group and aged are first\n",
+      "  Patient_ID   Name  Age      Diagnosis  Risk_Score  Cholesterol\n",
+      "1       P002  Sarah   60       Diabetes         8.2          210\n",
+      "4       P005  David   50       Diabetes         8.5          230\n",
+      "2       P003   Mike   35        Healthy         1.2          180\n",
+      "5       P006  Linda   29        Healthy         2.0          160\n",
+      "3       P004   Emma   72  Heart Disease         9.8          290\n",
+      "0       P001   John   45   Hypertension         7.5          240\n"
      ]
     }
    ],
@@ -8725,7 +8734,16 @@
     "## doctor wants to see the sickest patient on the top \n",
     "critical_patients = df.sort_values(by = 'Risk_Score', ascending = False)\n",
     "print(\"\\n Triage List critical patient first\")\n",
-    "print(critical_patients)\n"
+    "print(critical_patients)\n",
+    "\n",
+    "#=====================\n",
+    "# multi level sorting \n",
+    "#=====================\n",
+    "\n",
+    "#scenario - group patients by diagonasis and sorting by there age\n",
+    "grouped_sort = df.sort_values(by =['Diagnosis', 'Age'], ascending= [True,False] )\n",
+    "print(\"\\n patients with their group and aged are first\")\n",
+    "print(grouped_sort)\n"
    ]
   }
  ],
