we ahve added more sorting like to head on the file

--- a/python recap/2nd practiseset/pract2.ipynb
+++ b/python recap/2nd practiseset/pract2.ipynb
@@ -8672,7 +8672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "8bb90982",
    "metadata": {},
    "outputs": [
@@ -8705,7 +8705,13 @@
       "2       P003   Mike   35        Healthy         1.2          180\n",
       "5       P006  Linda   29        Healthy         2.0          160\n",
       "3       P004   Emma   72  Heart Disease         9.8          290\n",
-      "0       P001   John   45   Hypertension         7.5          240\n"
+      "0       P001   John   45   Hypertension         7.5          240\n",
+      "\n",
+      " ===== Top 3 cholestreol patients are availble====\n",
+      "  Patient_ID   Name  Age      Diagnosis  Risk_Score  Cholesterol\n",
+      "3       P004   Emma   72  Heart Disease         9.8          290\n",
+      "0       P001   John   45   Hypertension         7.5          240\n",
+      "4       P005  David   50       Diabetes         8.5          230\n"
      ]
     }
    ],
@@ -8743,7 +8749,18 @@
     "#scenario - group patients by diagonasis and sorting by there age\n",
     "grouped_sort = df.sort_values(by =['Diagnosis', 'Age'], ascending= [True,False] )\n",
     "print(\"\\n patients with their group and aged are first\")\n",
-    "print(grouped_sort)\n"
+    "print(grouped_sort)\n",
+    "\n",
+    "#=================================\n",
+    "# finding the top N\n",
+    "#=================================\n",
+    "# scenario : TTop 3 patients who have colostrol\n",
+    "\n",
+    "top_3_cholestrol = df.sort_values(by = 'Cholesterol', ascending= False).head(3)\n",
+    "\n",
+    "print(\"\\n ===== Top 3 cholestreol patients are availble====\")\n",
+    "print(top_3_cholestrol)\n",
+    "\n"
    ]
   }
  ],
